@@ -1,6 +1,7 @@
 ver 0.23.9 (not yet released)
 * output
   - pipewire: set app icon
+* improve iconv detection
 
 ver 0.23.8 (2022/07/09)
 * storage
